# libteckos

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile-ix.py  conanfile.py  conanfile.txt
.github/workflows/: cmake.yml  cmake_alt.yml  using-cpprestsdk.yml  using-ixwebsocket.yml  with-vcpkg.yml
cmake/: Config.cmake.in  FixAppleArchitecture.cmake
include/teckos/: client.h  global.h  optional.hpp  rest.h  utils.h
src/: cli.cc
src/teckos/: client.cc  rest.cc
